# vega-widget

./: .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml
examples/: widget.py
src/js/: index.ts
src/py/vega_widget/: .gitignore  _to_records.py  ui.py
