[project]
name = "vega-widget"
version = "0.1.0"
description = "Plain vega visualizations as marimo-compatible anywidget"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget[dev]>=0.9.21",
]

[project.optional-dependencies]
ibis = [
    "ibis-framework[duckdb]>=12.0.0",
]
pandas = [
    "pandas>=3.0.1",
]
polars = [
    "polars>=1.39.3",
]

[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/py/vega_widget"]

# Bundle typescript code
[[tool.hatch.build.hooks.build-scripts.scripts]]
work_dir = "."
commands = [
    "npm run build",
]
artifacts = [
    "src/py/vega_widget/static/index.js",
]
out_dir = "."

[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "ruff>=0.15.7",
]
